[package]
name = "tari-jwt"
version = "0.1.0"
edition = "2021"
description = "Ristretto JWT support for jwt-compat"
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
jwt-compact = "0.8.0"
rand = "0.8.4"
tari_crypto = { version = "0.20.0", default-features = false, features = ["std"]}

[dev-dependencies]
assert_matches = "1.3"
const-decoder = "0.3.0"
base64ct = { version = "1.5.2", features = ["alloc"] }
chrono = { version = "0.4.35", default-features = false }
hex-buffer-serde = "0.4.0"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
